# hello_cmake_lib

./: .gitignore  CMakeLists.txt  README.markdown  mylib.cpp  mylib.h
